--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "tailwindcss": "^3.4.9"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@types/node": "^22.2.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -32,7 +36,8 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.4",
+    "ts-node": "^10.9.2",
+    "typescript": "5.3.3",
     "vite": "^5.4.0",
     "vitest": "^2.0.5"
   }
