--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,11 +13,10 @@
       "version": "detect"
     }
   },
-  "ignorePatterns": ["dist", ".eslintrc.cjs"],
+  "ignorePatterns": ["dist", ".eslintrc.cjs", "node_modules"],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["react-refresh"],
+  "plugins": [],
   "rules": {
-    "react-refresh/only-export-components": ["warn", { "allowConstantExport": true }],
     "no-unused-vars": [
       "error",
       {
