--- a/package.json
+++ b/package.json
@@ -38,16 +38,14 @@
     "@types/node": "^24.5.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
     "cypress": "^13.17.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
-    "eslint-plugin-storybook": "^0.8.0",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jsdom": "^24.1.3",
     "lint-staged": "^16.2.3",
@@ -55,6 +53,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.1"
